<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGreen">

    <RelativeLayout
        android:id="@+id/relLay1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="#5CAE4C">

        <TextView
            android:id="@+id/tv_cadastre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="22sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/settingimg"
            android:src="@drawable/ic_settings" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reLay2"
        android:layout_width="330dp"
        android:layout_height="300dp"
        android:layout_below="@+id/relLay1"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:background="@drawable/drawable_submitcard">

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="40dp"
            android:text="@string/submit_report"
            android:textColor="@color/colorDarkGreen"
            android:textSize="24sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/edttext1"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_below="@+id/tv_submit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:background="@drawable/drawable_textbox"
            android:hint="@string/owner_full_name"
            android:inputType="textPersonName"
            android:textColor="@color/colorDarkGreen" />


    </RelativeLayout>


</RelativeLayout>